# stfu

./: README.md  pyproject.toml  stfu.py
.github/workflows/: publish.yml  release.yml
src/st_flashing_utility/: __init__.py  __main__.py
src/stfu/: __init__.py  __main__.py
